// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PLAYING state test 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="container"
      >
        <div
          className="cardDeck card-group"
        >
          <div
            className="card"
          >
            <div
              className="card-title h5"
            >
              6
            </div>
            <div
              className="card-title h5"
            >
               of
            </div>
            <div
              className="card-title h5"
            >
              diamonds
            </div>
          </div>
          <div
            className="card"
          >
            <div
              className="card-title h5"
            >
              4
            </div>
            <div
              className="card-title h5"
            >
               of
            </div>
            <div
              className="card-title h5"
            >
              hearts
            </div>
          </div>
          <div
            className="card"
          >
            <div
              className="card-title h5"
            >
              8
            </div>
            <div
              className="card-title h5"
            >
               of
            </div>
            <div
              className="card-title h5"
            >
              clubs
            </div>
          </div>
        </div>
      </div>
      <br />
      <div
        className="btn-toolbar"
        role="toolbar"
      >
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Deal
        </button>
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Hit
        </button>
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Stand
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`not PLAYING state test 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="container"
      >
        <div
          className="cardDeck card-group"
        />
      </div>
      <br />
      <div
        className="btn-toolbar"
        role="toolbar"
      >
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Deal
        </button>
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Hit
        </button>
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Stand
        </button>
      </div>
    </div>
  </div>
</div>
`;
